[gd_scene load_steps=12 format=3 uid="uid://cniu1xumr2j3g"]

[ext_resource type="Texture2D" uid="uid://creoyt5o8yx45" path="res://Assets/Inventory Slot.png" id="1_jysp7"]
[ext_resource type="Script" path="res://Script/teacher_inventory_slot.gd" id="1_tf11q"]
[ext_resource type="Texture2D" uid="uid://c3s7pmwcpab3h" path="res://Assets/Potion.png" id="2_rdktn"]
[ext_resource type="FontFile" uid="uid://clctmbqnt7im3" path="res://Assets/font/SuperLegendBoy-4w8Y.ttf" id="3_rkui3"]
[ext_resource type="Texture2D" uid="uid://ceu5qa1vya5y2" path="res://Assets/box.png" id="4_k5ovl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cly0y"]

[sub_resource type="LabelSettings" id="LabelSettings_ff43w"]
font = ExtResource("3_rkui3")
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_v70ql"]
font = ExtResource("3_rkui3")
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_yxpve"]
font = ExtResource("3_rkui3")
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_1r1mh"]
font = ExtResource("3_rkui3")
font_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gcqiv"]

[node name="TeacherInventorySlot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tf11q")

[node name="OuterBorder" type="TextureRect" parent="."]
layout_mode = 1
offset_right = 50.0
offset_bottom = 50.0
texture = ExtResource("1_jysp7")

[node name="InnerBorder" type="ColorRect" parent="."]
layout_mode = 1
offset_left = 5.0
offset_top = 5.0
offset_right = 45.0
offset_bottom = 45.0

[node name="Icon" type="Sprite2D" parent="InnerBorder"]
position = Vector2(20, 20)
texture = ExtResource("2_rdktn")

[node name="ItemButton" type="Button" parent="."]
layout_mode = 1
offset_right = 50.0
offset_bottom = 50.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_cly0y")

[node name="DetailsPanel" type="TextureRect" parent="."]
z_index = 2
layout_mode = 1
offset_top = 50.0
offset_right = 148.0
offset_bottom = 113.0
texture = ExtResource("4_k5ovl")

[node name="Name" type="Label" parent="DetailsPanel"]
layout_mode = 0
offset_left = 7.0
offset_top = 8.0
offset_right = 63.0
offset_bottom = 20.0
text = "[]"
label_settings = SubResource("LabelSettings_ff43w")

[node name="Type" type="Label" parent="DetailsPanel"]
layout_mode = 1
offset_left = 7.0
offset_top = 20.0
offset_right = 104.0
offset_bottom = 32.0
text = "[]"
label_settings = SubResource("LabelSettings_v70ql")

[node name="Effact" type="Label" parent="DetailsPanel"]
layout_mode = 1
offset_left = 7.0
offset_top = 32.0
offset_right = 62.0
offset_bottom = 44.0
text = "+"
label_settings = SubResource("LabelSettings_yxpve")

[node name="Quantity" type="Label" parent="DetailsPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 7.0
offset_top = 10.5
offset_right = 47.0
offset_bottom = 22.5
grow_vertical = 2
text = "Price: "
label_settings = SubResource("LabelSettings_1r1mh")

[node name="UsagePanel" type="TextureRect" parent="."]
z_index = 2
layout_mode = 1
offset_top = -25.0
offset_right = 128.0
offset_bottom = 3.0
texture = ExtResource("4_k5ovl")

[node name="VBoxContainer" type="VBoxContainer" parent="UsagePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 5.0
offset_right = -4.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="BuyButton" type="Button" parent="UsagePanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_rkui3")
theme_override_font_sizes/font_size = 10
theme_override_styles/hover = SubResource("StyleBoxFlat_gcqiv")
text = "Buy"

[connection signal="mouse_entered" from="ItemButton" to="." method="_on_item_button_mouse_entered"]
[connection signal="mouse_exited" from="ItemButton" to="." method="_on_item_button_mouse_exited"]
[connection signal="pressed" from="ItemButton" to="." method="_on_item_button_pressed"]
[connection signal="pressed" from="UsagePanel/VBoxContainer/BuyButton" to="." method="_on_buy_button_pressed"]
